--- a/community/pom.xml
+++ b/community/pom.xml
@@ -87,6 +87,23 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-maven-plugin</artifactId>
+			<version>10.0.0</version>
+			<configuration>
+				<url>jdbc:h2:~/community</url>
+				<user></user>
+				<password></password>
+			</configuration>
+			<dependencies>
+				<dependency>
+					<groupId>com.h2database</groupId>
+					<artifactId>h2</artifactId>
+					<version>2.3.232</version>
+				</dependency>
+			</dependencies>
+			</plugin>
 		</plugins>
 	</build>
 
