add the first map

--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -8,3 +8,5 @@ github.redirect.uri=http://localhost:8887/callback
 spring.datasource.url=jdbc:h2:~/community
 spring.datasource.username=
 spring.datasource.password=
+
+mybatis.configuration.map-underscore-to-camel-case=true
