--- a/community/pom.xml
+++ b/community/pom.xml
@@ -90,6 +90,11 @@
 			<artifactId>h2</artifactId>
 			<version>2.3.232</version>
 		</dependency>
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<version>3.5.10.1</version>
+		</dependency>
 
 	</dependencies>
 
@@ -116,6 +121,20 @@
 				</dependency>
 			</dependencies>
 			</plugin>
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.4.2</version>
+
+				<dependencies>
+					<dependency>
+						<groupId>com.h2database</groupId>
+						<artifactId>h2</artifactId>
+						<version>2.3.232</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
 		</plugins>
 	</build>
 
